feat: update book
